Update job-config.json for 3.9.1, switch 3.10 to next and 3.9.1 to latest in quay

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -526,8 +526,8 @@
   "CSVs": {
     "operator-bundle": {
       "3.9": {
-        "CSV_VERSION": "3.9.0",
-        "CSV_VERSION_PREV": "3.8.0"
+        "CSV_VERSION": "3.9.1",
+        "CSV_VERSION_PREV": "3.9.0"
       },
       "3.10": {
         "CSV_VERSION": "3.10.0",
@@ -557,8 +557,8 @@
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
-      "3.9": "3.9",
-      "3.10": "latest",
+      "3.9": "latest",
+      "3.10": "next",
       "3.11": "next",
       "3.x": "next"
     },
