--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3445,3 +3445,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-12
+  taskId: 56666567
+  timeCreate: Tue Oct 31 21:18:57 2023
+  timeStart: Tue Oct 31 21:19:14 2023
+  timeFinish: Tue Oct 31 21:27:23 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-20
+  taskId: 56667170
+  timeCreate: Tue Oct 31 21:46:19 2023
+  timeStart: Tue Oct 31 21:46:53 2023
+  timeFinish: Tue Oct 31 21:50:27 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
