--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -700,3 +700,120 @@
   timeWait: 80 mins
   timeBuild: 4 mins
   timeTotal: 85 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.9-28
+  taskId: 56661149
+  timeCreate: Tue Oct 31 17:41:34 2023
+  timeStart: Tue Oct 31 17:41:55 2023
+  timeFinish: Tue Oct 31 17:54:03 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.9-8
+  taskId: 56662453
+  timeCreate: Tue Oct 31 18:27:22 2023
+  timeStart: Tue Oct 31 18:27:46 2023
+  timeFinish: Tue Oct 31 18:40:13 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.9-26
+  taskId: 56662455
+  timeCreate: Tue Oct 31 18:27:27 2023
+  timeStart: Tue Oct 31 18:27:47 2023
+  timeFinish: Tue Oct 31 18:51:50 2023
+  timeWait: 0 mins
+  timeBuild: 24 mins
+  timeTotal: 24 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.9-12
+  taskId: 56662490
+  timeCreate: Tue Oct 31 18:30:01 2023
+  timeStart: Tue Oct 31 18:30:14 2023
+  timeFinish: Tue Oct 31 18:35:34 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-udi-rhel8
+  tag: 3.9-18
+  taskId: 56662516
+  timeCreate: Tue Oct 31 18:32:40 2023
+  timeStart: Tue Oct 31 18:33:25 2023
+  timeFinish: Tue Oct 31 19:24:34 2023
+  timeWait: 0 mins
+  timeBuild: 51 mins
+  timeTotal: 51 mins
+- name: devspaces-operator
+  tag: 3.9-12
+  taskId: 56662601
+  timeCreate: Tue Oct 31 18:38:59 2023
+  timeStart: Tue Oct 31 18:39:34 2023
+  timeFinish: Tue Oct 31 18:53:43 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 14 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.9-9
+  taskId: 56665859
+  timeCreate: Tue Oct 31 20:38:46 2023
+  timeStart: Tue Oct 31 20:39:01 2023
+  timeFinish: Tue Oct 31 21:04:32 2023
+  timeWait: 0 mins
+  timeBuild: 25 mins
+  timeTotal: 25 mins
+- name: devspaces-idea-rhel8
+  tag: 3.9-6
+  taskId: 56665875
+  timeCreate: Tue Oct 31 20:39:15 2023
+  timeStart: Tue Oct 31 20:39:56 2023
+  timeFinish: Tue Oct 31 20:54:39 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 15 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.9-16
+  taskId: 56665886
+  timeCreate: Tue Oct 31 20:40:59 2023
+  timeStart: Tue Oct 31 20:41:07 2023
+  timeFinish: Tue Oct 31 21:12:22 2023
+  timeWait: 0 mins
+  timeBuild: 31 mins
+  timeTotal: 31 mins
+- name: devspaces-server-rhel8
+  tag: 3.9-13
+  taskId: 56666395
+  timeCreate: Tue Oct 31 20:59:34 2023
+  timeStart: Tue Oct 31 20:59:45 2023
+  timeFinish: Tue Oct 31 21:08:10 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.9-37
+  taskId: 56667411
+  timeCreate: Tue Oct 31 21:59:37 2023
+  timeStart: Tue Oct 31 22:00:16 2023
+  timeFinish: Tue Oct 31 22:08:14 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-code-rhel8
+  tag: 3.9-49
+  taskId: 56696568
+  timeCreate: Wed Nov 1 20:10:20 2023
+  timeStart: Wed Nov 1 20:10:43 2023
+  timeFinish: Wed Nov 1 20:17:48 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-323
+  taskId: 56715214
+  timeCreate: Thu Nov 2 09:28:55 2023
+  timeStart: Thu Nov 2 09:29:18 2023
+  timeFinish: Thu Nov 2 09:32:34 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
