--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3517,3 +3517,21 @@
   timeWait: 4 mins
   timeBuild: 4 mins
   timeTotal: 8 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-14
+  taskId: 56733080
+  timeCreate: Thu Nov 2 19:06:09 2023
+  timeStart: Thu Nov 2 19:06:41 2023
+  timeFinish: Thu Nov 2 19:14:54 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-24
+  taskId: 56733586
+  timeCreate: Thu Nov 2 19:26:02 2023
+  timeStart: Thu Nov 2 19:26:03 2023
+  timeFinish: Thu Nov 2 19:29:25 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
