--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -844,3 +844,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.9-28
+  taskId: 56753350
+  timeCreate: Fri Nov 3 15:17:45 2023
+  timeStart: Fri Nov 3 15:18:25 2023
+  timeFinish: Fri Nov 3 15:43:21 2023
+  timeWait: 0 mins
+  timeBuild: 24 mins
+  timeTotal: 25 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-326
+  taskId: 56753513
+  timeCreate: Fri Nov 3 15:52:23 2023
+  timeStart: Fri Nov 3 15:53:05 2023
+  timeFinish: Fri Nov 3 15:56:26 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
