--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -508,7 +508,7 @@
         "disabled": false
       }
     },
-    "slack_notification": {
+    "slack-notification": {
       "3.9": {
         "disabled": false
       },
@@ -659,9 +659,6 @@
       "3.10": "1.22.19",
       "3.11": "1.22.19",
       "3.x": "1.22.19"
-    },
-    "slack_notification": {
-      "3.11": true
     }
   },
   "Copyright": [
