--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3454,3 +3454,66 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.10-19
+  taskId: 56759003
+  timeCreate: Sat Nov 4 13:09:20 2023
+  timeStart: Sat Nov 4 13:09:42 2023
+  timeFinish: Sat Nov 4 13:21:56 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.10-12
+  taskId: 56759004
+  timeCreate: Sat Nov 4 13:09:20 2023
+  timeStart: Sat Nov 4 13:09:43 2023
+  timeFinish: Sat Nov 4 13:15:03 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.10-49
+  taskId: 56759005
+  timeCreate: Sat Nov 4 13:09:32 2023
+  timeStart: Sat Nov 4 13:09:44 2023
+  timeFinish: Sat Nov 4 13:31:50 2023
+  timeWait: 0 mins
+  timeBuild: 22 mins
+  timeTotal: 22 mins
+- name: devspaces-operator
+  tag: 3.10-24
+  taskId: 56759007
+  timeCreate: Sat Nov 4 13:11:00 2023
+  timeStart: Sat Nov 4 13:11:16 2023
+  timeFinish: Sat Nov 4 13:25:48 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 14 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.10-11
+  taskId: 56759009
+  timeCreate: Sat Nov 4 13:12:49 2023
+  timeStart: Sat Nov 4 13:13:34 2023
+  timeFinish: Sat Nov 4 13:35:58 2023
+  timeWait: 0 mins
+  timeBuild: 22 mins
+  timeTotal: 23 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.10-11
+  taskId: 56759010
+  timeCreate: Sat Nov 4 13:13:10 2023
+  timeStart: Sat Nov 4 13:13:35 2023
+  timeFinish: Sat Nov 4 13:23:05 2023
+  timeWait: 0 mins
+  timeBuild: 9 mins
+  timeTotal: 9 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-189
+  taskId: 56759058
+  timeCreate: Sat Nov 4 13:35:04 2023
+  timeStart: Sat Nov 4 13:35:43 2023
+  timeFinish: Sat Nov 4 13:38:53 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
