--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3706,3 +3706,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 2 mins
+- name: devspaces-idea-rhel8
+  tag: 3.11-3
+  taskId: 56760796
+  timeCreate: Sun Nov 5 05:24:28 2023
+  timeStart: Sun Nov 5 05:25:13 2023
+  timeFinish: Sun Nov 5 05:39:25 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 14 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-31
+  taskId: 56760867
+  timeCreate: Sun Nov 5 05:59:48 2023
+  timeStart: Sun Nov 5 06:00:05 2023
+  timeFinish: Sun Nov 5 06:02:55 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
