--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3616,3 +3616,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-87
+  taskId: 56829290
+  timeCreate: Wed Nov 8 08:29:39 2023
+  timeStart: Wed Nov 8 08:30:08 2023
+  timeFinish: Wed Nov 8 08:37:26 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-195
+  taskId: 56830530
+  timeCreate: Wed Nov 8 09:05:44 2023
+  timeStart: Wed Nov 8 09:05:54 2023
+  timeFinish: Wed Nov 8 09:08:59 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
